hphp/hack/test/typecheck/async_function_untyped1.php.exp
File "async_function_untyped1.php", line 9, characters 7-9:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
  File "async_function_untyped1.php", line 3, characters 16-16:
  This is why I think it is `Awaitable`
File "async_function_untyped1.php", line 3, characters 16-16:
Was expecting a return type hint (Typing[4030])
